<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:focusableInTouchMode="true"
    android:focusable="true"
    tools:context=".NuevoProveedorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivNuevo"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/nuevoicon"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/etRazonSocialProveedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/etRazonSocialProveedor"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="Autofill,TextFields,VisualLintTextFieldSize,TextContrastCheck" />

            <EditText
                android:id="@+id/etDireccionProveedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/etDireccionProveedor"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/etTelefonoProveedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/etTelefonoProveedor"
                android:inputType="phone"
                android:maxLength="12"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/etUrlProveedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/etUrlProveedor"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/etCorreoElectronicoProveedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/etCorreoElectronicoProveedor"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="Autofill,TextFields,VisualLintTextFieldSize,TextContrastCheck" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/fabCancelar"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/fabAgregar"
            app:fabSize="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_guardar_fab"
            app:tint="@color/white"
            android:visibility="invisible"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/fabMenu"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/fabRegresar"
            app:fabSize="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_regresar_fab"
            app:tint="@color/white"
            android:visibility="invisible"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/fabMenu"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_menu_fab"
            app:tint="@color/white"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />
    </RelativeLayout>

</RelativeLayout>